--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<br>
 
 						<p class="style3">Build a portfolio and outline how I did it. <strong> But I've only got two days,</strong> there's a lorry with my name on it.
-						My current <a href="/public_CV.pdf">CV is here.</a> And my thanks to <a href="https://html5up.net/escape-velocity">html5up.net </a>for this template, I wouldn't
+						My current <a href="/public_cv.pdf">CV is here.</a> And my thanks to <a href="https://html5up.net/escape-velocity">html5up.net </a>for this template, I wouldn't
 					have had time to build this from scrach in only two days.</p>
 
 
