--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<!-- <li><a href="#">Nisl tempus</a></li> -->
 									</ul>
 								</li>
-								<li><a href="/public_cv.pdf">Curriculum Vitae</a></li>
+								<li><a href="public_cv.pdf">Curriculum Vitae</a></li>
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="#contactForm">Contact Form</a></li>
 							</ul>
