--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<a href="#nav">Design</a>
 									<ul>
 										<li><a href="index.html#ProjectPlanning">Project Planning</a></li>
-										<li><a href="index.html#Design%20Assets">Design Assets</a></li>
+										<li><a href="paulmccreadie/projects.html#Design%20Assetsl#Design%20Assets">Design Assets</a></li>
 										<li><a href="projects.html#Design%20Assets">More Design Asets</a></li>
 										
 										<!-- <li>
